# olpcx

./: Makefile.in  README.md  config.h.in  configure  configure.ac
src/: CR_Close.c  CR_CreateDeviceInfoList.c  CR_FindMatchingDevices.c  CR_GetDeviceInfoList.c  CR_GetQueueStatus.c  CR_OpenEx.c  CR_Read.c  CR_Write.c  Makefile.am  Makefile.in  OLPC_Link.c  OLPC_Link.h
